--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "leaflet": "^1.0.3",
     "vue": "^2.0.1",
     "vue-router": "^2.0.0"
   },
